<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/brown"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AddTodo"
    tools:ignore="OnClick"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/add_todo"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/black"
        app:hintEnabled="false"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_todo_name"
            android:layout_width="300dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/idk"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:nextFocusLeft="@id/add_todo_name"
            android:nextFocusUp="@id/add_todo_name"
            android:padding="7dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/black"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_todo_desc"
            android:layout_width="300dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/idk"
            android:ems="10"
            android:hint="@string/hint_desc"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:nextFocusLeft="@id/add_todo_name"
            android:nextFocusUp="@id/add_todo_name"
            android:padding="7dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="388dp"
        android:layout_height="138dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_noti"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:background="@color/idk"
                android:scaleType="centerInside"
                android:layout_margin="1dp"
                android:onClick="buttonClick"

                app:srcCompat="@drawable/outline_notifications_black" />

            <ImageButton
                android:id="@+id/button_science"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/idk"
                app:srcCompat="@drawable/outline_science_black"
                android:onClick="buttonClick"
                android:scaleType="centerInside"/>

            <ImageButton
                android:id="@+id/button_games"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/idk"
                app:srcCompat="@drawable/outline_sports_esports_black"
                android:onClick="buttonClick"
                android:scaleType="centerInside"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button_trip"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:background="@color/idk"
                android:scaleType="centerInside"
                android:layout_margin="1dp"
                app:srcCompat="@drawable/outline_hiking_black"
                android:onClick="buttonClick"/>

            <ImageButton
                android:id="@+id/button_build"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_margin="1dp"
                android:background="@color/idk"
                android:layout_weight="1"
                app:srcCompat="@drawable/outline_construction_black"
                android:onClick="buttonClick"
                android:scaleType="centerInside"/>
        </TableRow>

    </TableLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/idk"
        android:onClick="dateClick"
        android:text="@string/date_button"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/idk"
        android:onClick="timeClick"
        android:text="@string/time_button"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/idk"
        android:onClick="doneClick"
        android:text="@string/button_done"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>